--- a/package.json
+++ b/package.json
@@ -11,48 +11,80 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.2.0",
-    "@angular/common": "~8.2.0",
-    "@angular/compiler": "~8.2.0",
-    "@angular/core": "~8.2.0",
-    "@angular/forms": "~8.2.0",
-    "@angular/platform-browser": "~8.2.0",
-    "@angular/platform-browser-dynamic": "~8.2.0",
-    "@angular/router": "~8.2.0",
+    "@angular/animations": "^8.2.0",
+    "@angular/cdk": "^8.1.2",
+    "@angular/common": "^8.2.0",
+    "@angular/compiler": "^8.2.0",
+    "@angular/core": "^8.2.0",
+    "@angular/forms": "^8.2.0",
+    "@angular/material": "^8.1.2",
+    "@angular/platform-browser": "^8.2.0",
+    "@angular/platform-browser-dynamic": "^8.2.0",
+    "@angular/router": "^8.2.0",
+    "@dbg-riskit/angular-auth": "^8.0.2",
+    "@dbg-riskit/angular-charts": "^8.0.2",
+    "@dbg-riskit/angular-common": "^8.0.2",
+    "@dbg-riskit/angular-datatable": "^8.0.2",
+    "@dbg-riskit/angular-dbg-layout": "^8.0.2",
+    "@dbg-riskit/angular-error": "^8.0.2",
+    "@dbg-riskit/angular-file": "^8.0.2",
+    "@dbg-riskit/angular-graphql": "^8.0.2",
+    "@dbg-riskit/angular-http": "^8.0.2",
+    "@dbg-riskit/angular-logging": "^8.0.2",
+    "@dbg-riskit/angular-login": "^8.0.2",
+    "@dbg-riskit/angular-polyfill": "^8.0.2",
+    "@dbg-riskit/angular-testing": "^8.0.2",
+    "@dbg-riskit/angular-view": "^8.0.2",
+    "apollo-angular": "^1.6.0",
+    "apollo-angular-link-http": "^1.8.0",
+    "apollo-cache-inmemory": "^1.6.2",
+    "apollo-client": "^2.6.3",
+    "apollo-link-context": "^1.0.18",
+    "core-js": "^2.6.9",
+    "file-saver": "^1.3.8",
+    "graphql": "^14.4.2",
+    "graphql-tag": "^2.10.1",
+    "hammerjs": "^2.0.8",
+    "rxjs": "~6.5.2",
+    "web-animations-js": "2.3.2-pr208",
+    "zone.js": "~0.9.1",
     "@fortawesome/angular-fontawesome": "^0.5.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.21",
     "@fortawesome/free-solid-svg-icons": "^5.10.1",
-    "apollo-angular": "^1.6.0",
-    "bootstrap": "^4.3.1",
-    "rxjs": "~6.4.0",
-    "tslib": "^1.10.0",
-    "zone.js": "~0.9.1",
-    "apollo-angular-link-http": "^1.6.0",
-    "apollo-link": "^1.2.11",
-    "apollo-client": "^2.6.0",
-    "apollo-cache-inmemory": "^1.3.2",
-    "graphql-tag": "^2.10.0",
-    "graphql": "^14.3.1"
+    "bootstrap": "^4.3.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.802.0",
-    "@angular/cli": "~8.2.0",
-    "@angular/compiler-cli": "~8.2.0",
-    "@angular/language-service": "~8.2.0",
-    "@types/node": "~8.9.4",
-    "@types/jasmine": "~3.3.8",
-    "@types/jasminewd2": "~2.0.3",
-    "codelyzer": "^5.0.0",
+    "@angular/core": "^8.2.0",
+    "@angular-devkit/build-angular": "^0.800.6",
+    "@angular/cli": "^8.0.6",
+    "@angular/compiler-cli": "^8.2.0",
+    "@angular/language-service": "^8.2.0",
+    "@types/jasmine": "^3.3.16",
+    "@types/jasminewd2": "^2.0.6",
+    "@types/node": "^10.14.14",
+    "codelyzer": "^5.1.0",
+    "graphql-code-generator": "~0.16.1",
+    "graphql-codegen-apollo-angular-template": "~0.16.1",
+    "graphql-codegen-introspection-template": "~0.16.1",
+    "graphql-codegen-typescript-client": "~0.16.1",
+    "graphql-codegen-typescript-common": "~0.16.1",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
     "karma": "~4.1.0",
+    "karma-browserstack-launcher": "^1.5.1",
     "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
+    "karma-firefox-launcher": "^1.1.0",
+    "karma-htmlfile-reporter": "^0.3.8",
+    "karma-ie-launcher": "^1.0.0",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~5.15.0",
-    "typescript": "~3.5.3"
+    "karma-jasmine-html-reporter": "^1.4.2",
+    "karma-junit-reporter": "^1.2.0",
+    "karma-safari-launcher": "^1.0.0",
+    "karma-spec-reporter": "0.0.32",
+    "protractor": "~5.4.2",
+    "publish-gh-pages-node": "^1.0.2",
+    "tslint": "~5.17.0",
+    "typescript": "~3.4.5"
   }
 }
